name:                base-openssl
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Sebastian Nagel
maintainer:          sebastian.nagel@ncoding.at
category:            Signature
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.25

library
  build-depends: base-indef
               , integer-impl-openssl
  mixins: integer-impl-openssl (GHC.Integer.OpenSSL as GHCInteger)
  hs-source-dirs:      src
  exposed-modules:     P2
  default-language:    Haskell2010
