name:                demo
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Sebastian Nagel
maintainer:          sebastian.nagel@ncoding.at
category:            Signature
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.25

executable demo-openssl
  build-depends:
                -- only for non-Integer imports
                base
              , base-openssl
  main-is: Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

executable demo-gmp
  build-depends:
                -- only for non-Integer imports
                base
              , base-gmp
  main-is: Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
