name:                integer-sig
version:             0.1.0
synopsis:            Signature package for the 'Integer' type
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sebastian Nagel
maintainer:          sebastian.nagel@ncoding.at
category:            Signature
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.25

library
  signatures:        GHCInteger
  build-depends:     ghc-prim
  default-language:  Haskell2010
